--- a/views/contact.pug
+++ b/views/contact.pug
@@ -10,11 +10,11 @@ block style
         include ../static/style.css
 block content
     h1 Contact Us
-    form(action= "/contact", method= "post", class= "myForm")
+    form(action= '/contact', method= "post", class= "myForm")
     <input type="text"class= "name" name="name" placeholder="Enter your name..">
-    <input type="phone" class= "myInput" name="phone" placeholder="Enter your name..">
+    <input type="phone" class= "myInput" name="phone" placeholder="Enter your phone..">
     <input type="email" class= "myInput" name="email" placeholder="Enter your email..">
-    <input type="text" name="firstname" placeholder="Your name..">
+    <input type="text" name="address" placeholder="Your address..">
 
     button 
         |submit
