--- a/views/base.pug
+++ b/views/base.pug
@@ -9,11 +9,11 @@ html
         div#logo
           img(src='/static/img/logo.png')
           |DA
-        li #[a(href='#') Home] 
+        li #[a(href='/home') Home] 
         li #[a(href='#') About] 
         li #[a(href='#') Services] 
         li #[a(href='#') Class Info] 
-        li #[a(href='#') Contact Us]
+        li #[a(href='/contact') Contact Us]
     block content 
     footer#footer 
         | Copyright 2021 Dance Academy 
